--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
   "@type": "WebSite",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "yao/?q={search_term_string}",
+    "target": "yao?q={search_term_string}",
     "query-input": "required name=search_term_string"
   },
-  "url": "yao/"
+  "url": "yao"
 }
 </script>
 
@@ -313,14 +313,14 @@
 {
   "@context": "https://schema.org",
   "@type": "Project",
-  "@id": "yao/",
+  "@id": "yao",
   "name": "运维文档",
   "logo": "/yao/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_192x192_fill_lanczos_center_2.png",
   
   
   
   
-  "url": "yao/"
+  "url": "yao"
 }
 </script>
 
