修改编译目录

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta name="description" content="My project documentation." />
 
   
-  <link rel="alternate" hreflang="zh" href="yao/" />
+  <link rel="alternate" hreflang="zh" href="/yao/" />
 
   
 
@@ -255,7 +255,7 @@
   
 
   
-    <link rel="alternate" href="yao/index.xml" type="application/rss+xml" title="运维文档" />
+    <link rel="alternate" href="/yao/index.xml" type="application/rss+xml" title="运维文档" />
   
 
   
@@ -265,7 +265,7 @@
   <link rel="icon" type="image/png" href="/yao/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_32x32_fill_lanczos_center_2.png" />
   <link rel="apple-touch-icon" type="image/png" href="/yao/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_180x180_fill_lanczos_center_2.png" />
 
-  <link rel="canonical" href="yao/" />
+  <link rel="canonical" href="/yao/" />
 
   
   
@@ -282,7 +282,7 @@
   <meta property="twitter:card" content="summary" />
   
   <meta property="og:site_name" content="运维文档" />
-  <meta property="og:url" content="yao/" />
+  <meta property="og:url" content="/yao/" />
   <meta property="og:title" content="运维文档" />
   <meta property="og:description" content="My project documentation." /><meta property="og:image" content="/yao/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_2.png" />
     <meta property="twitter:image" content="/yao/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="zh" />
@@ -300,10 +300,10 @@
   "@type": "WebSite",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "yao?q={search_term_string}",
+    "target": "/yao?q={search_term_string}",
     "query-input": "required name=search_term_string"
   },
-  "url": "yao"
+  "url": "/yao"
 }
 </script>
 
@@ -313,14 +313,14 @@
 {
   "@context": "https://schema.org",
   "@type": "Project",
-  "@id": "yao",
+  "@id": "/yao",
   "name": "运维文档",
   "logo": "/yao/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_192x192_fill_lanczos_center_2.png",
   
   
   
   
-  "url": "yao"
+  "url": "/yao"
 }
 </script>
 
